--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@types/react-dom": "18.0.6",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
+    "msw": "0.29.0",
     "typescript": "4.8.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
