--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "axios": "^0.27.2",
+    "emailjs-com": "^3.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
