--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.14.5",
     "@tanstack/react-query-devtools": "^4.14.5",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "emailjs-com": "^3.2.0",
     "heic2any": "^0.0.3",
     "next": "12.3.1",
