--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "heic2any": "^0.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
